Add test to check if you get eaten when hug level drops to 0.
Co-authored-by: Johnny Duverseau <duverseaujohnny21@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Hungry Bear game</title>
 </head>
 <body>
-  
+  <div class="container">
+    <img class="bear-img" src="https://banner2.cleanpng.com/20180322/hiq/kisspng-polar-bear-eurasian-brown-bear-clip-art-bear-5ab37bd606c8d0.8182750115217120860278.jpg" alt="Brown Bear">
+    <h1>Will you get eaten!?</h1>
+    <div id="buttons">
+      <button class="btn btn-primary">Feed!</button>
+      <button class="btn btn-success">Scratch!</button>
+      <button class="btn btn-warning">Hug!</button>
+    </div>
+  </div>
 </body>
 </html>
