--- a/src/index.html
+++ b/src/index.html
@@ -7,12 +7,15 @@
 </head>
 <body>
   <div class="container">
-    <img class="bear-img" src="https://banner2.cleanpng.com/20180322/hiq/kisspng-polar-bear-eurasian-brown-bear-clip-art-bear-5ab37bd606c8d0.8182750115217120860278.jpg" alt="Brown Bear">
+    <img class="bear-img" src="https://images.unsplash.com/photo-1530595467537-0b5996c41f2d?ixlib=rb-1.2.1&w=1000&q=80" alt="Brown Bear">
     <h1>Will you get eaten!?</h1>
     <div id="buttons">
       <button class="btn btn-primary">Feed!</button>
       <button class="btn btn-success">Scratch!</button>
       <button class="btn btn-warning">Hug!</button>
+    </div>
+    <div class="countdown">
+      
     </div>
   </div>
 </body>
