--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,10 @@
       <button class="btn btn-success">Scratch!</button>
       <button class="btn btn-warning">Hug!</button>
     </div>
-    <div class="countdown">
-      
+    <div id="countdown">
+      <p>your feed is up <span id="food"></span></p>
+      <p> your scratch is up <span id="scratch"></span></p>
+      <p>your hug is up <span id="hug"></span></p>
     </div>
   </div>
 </body>
